--- a/src/main/webapp/index_template.html
+++ b/src/main/webapp/index_template.html
@@ -5,7 +5,7 @@
 <title>Sport Center - free website template</title>
 <meta name="keywords" content="free web template, sport center, CSS, HTML, 2 columns" />
 <meta name="description" content="Free Website Template - Sport Center" />
-<link href="templatemo_style.css" rel="stylesheet" type="text/css" />
+<link href="resources/css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
