--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,6 +4,37 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
+	<ui:define name="side_content">
+		<div class="top"></div>
+
+		<div class="header_01">News &amp; Events</div>
+
+		<div class="news_event_section">
+			<div class="header_02">Lorem ipsum dolor sit amet</div>
+			<img src="images/templatemo_image_01.jpg" alt="photo one" />
+			<p>Donec ut felis libero. Nunc vel libero libero, in dignissim
+				urna. Praesent tempor, arcu at egestas vestibulum, lorem elit
+				viverra velit, sit amet gravida ligula ante et sem.</p>
+			<div class="button_01">
+				<a href="#">Read more</a>
+			</div>
+		</div>
+
+		<div class="news_event_section">
+			<div class="header_02">Integer in magna nec lacus</div>
+			<img src="images/templatemo_image_00.jpg" alt="photo two" />
+			<p>Suspendisse potenti. Aliquam erat volutpat. Mauris tempus
+				massa vitae sem posuere pharetra. Donec eget neque erat, ac
+				venenatis libero. Cras consequat pharetra sem ut imperdiet.</p>
+			<div class="button_01">
+				<a href="#">Read more</a>
+			</div>
+		</div>
+
+		<div class="cleaner"></div>
+		<div class="bottom"></div>
+	</ui:define>
+
 	<ui:define name="content">
 		<div class="header_01">Welcome to Sport Center</div>
 
