--- a/src/main/webapp/matches/index.xhtml
+++ b/src/main/webapp/matches/index.xhtml
@@ -11,7 +11,7 @@
 
 		<div class="news_event_section">
 			<div class="header_02">Lorem ipsum dolor sit amet</div>
-			<img src="#{request.contextPath}/resources/css/images/templatemo_image_01.jpg" alt="photo one" />
+			<img src="images/templatemo_image_01.jpg" alt="photo one" />
 			<p>Donec ut felis libero. Nunc vel libero libero, in dignissim
 				urna. Praesent tempor, arcu at egestas vestibulum, lorem elit
 				viverra velit, sit amet gravida ligula ante et sem.</p>
@@ -22,7 +22,7 @@
 
 		<div class="news_event_section">
 			<div class="header_02">Integer in magna nec lacus</div>
-			<img src="#{request.contextPath}/resources/css/images/templatemo_image_00.jpg" alt="photo two" />
+			<img src="images/templatemo_image_00.jpg" alt="photo two" />
 			<p>Suspendisse potenti. Aliquam erat volutpat. Mauris tempus
 				massa vitae sem posuere pharetra. Donec eget neque erat, ac
 				venenatis libero. Cras consequat pharetra sem ut imperdiet.</p>
@@ -40,7 +40,7 @@
 
 		<div class="section_w480">
 			<div class="image_wrapper fl_img">
-				<img src="#{request.contextPath}/resources/css/images/templatemo_image_02.jpg" alt="photo three" />
+				<img src="images/templatemo_image_02.jpg" alt="photo three" />
 			</div>
 			<p class="em_text">
 				This Free CSS Template is provided by <a
@@ -72,7 +72,7 @@
 
 			<div class="section_w160 fl">
 				<div class="image_wrapper">
-					<img src="#{request.contextPath}/resources/css/images/templatemo_image_03.jpg" alt="image" />
+					<img src="images/templatemo_image_03.jpg" alt="image" />
 				</div>
 
 			</div>
