finalized navigation added about page

--- a/src/main/webapp/sports/index.xhtml
+++ b/src/main/webapp/sports/index.xhtml
@@ -4,6 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
+	<ui:param name="currentTitle" value="Sports" />
 	<ui:define name="side_content">
 		<div class="top"></div>
 
