--- a/src/main/webapp/about.xhtml
+++ b/src/main/webapp/about.xhtml
@@ -4,7 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
-	<ui:param name="currentTitle" value="Users" />
+	<ui:param name="currentTitle" value="About" />
 	<ui:define name="side_content">
 		<div class="top"></div>
 
@@ -12,7 +12,7 @@
 
 		<div class="news_event_section">
 			<div class="header_02">Lorem ipsum dolor sit amet</div>
-			<img src="images/templatemo_image_01.jpg" alt="photo one" />
+			<img src="#{request.contextPath}/resources/css/images/templatemo_image_01.jpg" alt="photo one" />
 			<p>Donec ut felis libero. Nunc vel libero libero, in dignissim
 				urna. Praesent tempor, arcu at egestas vestibulum, lorem elit
 				viverra velit, sit amet gravida ligula ante et sem.</p>
@@ -23,7 +23,7 @@
 
 		<div class="news_event_section">
 			<div class="header_02">Integer in magna nec lacus</div>
-			<img src="images/templatemo_image_00.jpg" alt="photo two" />
+			<img src="#{request.contextPath}/resources/css/images/templatemo_image_00.jpg" alt="photo two" />
 			<p>Suspendisse potenti. Aliquam erat volutpat. Mauris tempus
 				massa vitae sem posuere pharetra. Donec eget neque erat, ac
 				venenatis libero. Cras consequat pharetra sem ut imperdiet.</p>
@@ -41,7 +41,7 @@
 
 		<div class="section_w480">
 			<div class="image_wrapper fl_img">
-				<img src="images/templatemo_image_02.jpg" alt="photo three" />
+				<img src="#{request.contextPath}/resources/css/images/templatemo_image_02.jpg" alt="photo three" />
 			</div>
 			<p class="em_text">
 				This Free CSS Template is provided by <a
@@ -73,7 +73,7 @@
 
 			<div class="section_w160 fl">
 				<div class="image_wrapper">
-					<img src="images/templatemo_image_03.jpg" alt="image" />
+					<img src="#{request.contextPath}/resources/css/images/templatemo_image_03.jpg" alt="image" />
 				</div>
 
 			</div>
