--- a/src/main/webapp/sports/index.xhtml
+++ b/src/main/webapp/sports/index.xhtml
@@ -6,34 +6,32 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:param name="currentTitle" value="Sports" />
 	<ui:define name="side_content">
-		<div class="top"></div>
 
-		<div class="header_01">News &amp; Events</div>
-
-		<div class="news_event_section">
-			<div class="header_02">Lorem ipsum dolor sit amet</div>
-			<img src="images/templatemo_image_01.jpg" alt="photo one" />
-			<p>Donec ut felis libero. Nunc vel libero libero, in dignissim
-				urna. Praesent tempor, arcu at egestas vestibulum, lorem elit
-				viverra velit, sit amet gravida ligula ante et sem.</p>
-			<div class="button_01">
-				<a href="#">Read more</a>
-			</div>
-		</div>
+		<div class="header_01">New Sport</div>
 
 		<div class="news_event_section">
-			<div class="header_02">Integer in magna nec lacus</div>
-			<img src="images/templatemo_image_00.jpg" alt="photo two" />
-			<p>Suspendisse potenti. Aliquam erat volutpat. Mauris tempus
-				massa vitae sem posuere pharetra. Donec eget neque erat, ac
-				venenatis libero. Cras consequat pharetra sem ut imperdiet.</p>
-			<div class="button_01">
-				<a href="#">Read more</a>
-			</div>
+			<p>Here you as an administrator can add new sport to our league</p>
+			<div class="cleaner"></div>
+			<h:form id="reg">
+				<ui:insert name="formSport">
+					<ui:include src="/sports/formSport.xhtml" />
+				</ui:insert>
+				<p>
+					<h:panelGrid columns="2">
+						<h:column>
+							<div class="button_01">
+								<h:commandLink id="add" action="#{sportController.add}"
+									value="Submit" />
+							</div>
+						</h:column>
+						<h:column>
+							<h:messages	infoClass="valid" globalOnly="true" />
+						</h:column>
+					</h:panelGrid>
+				</p>
+			</h:form>
 		</div>
 
-		<div class="cleaner"></div>
-		<div class="bottom"></div>
 	</ui:define>
 
 	<ui:define name="content">
