added front page and event section

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,55 +14,35 @@
 				<img src="#{request.contextPath}/resources/css/images/templatemo_image_02.jpg" alt="photo three" />
 			</div>
 			<p class="em_text">
-				This Free CSS Template is provided by <a
-					href="http://www.templatemo.com" target="_parent">TemplateMo.com</a>.
-				You may use this template in your websites. Credit goes to <a
-					href="http://www.photovaco.com" target="_blank">Free Photos</a> for
-				photos used in this template.
+				Welcome to our exceptional portal which was created and designed for one and only purpose - to unite various people
+				all across the Globe in breath-taking tournaments for eternal glory. 
 			</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Integer vitae metus quis libero consectetur egestas. In hac
-				habitasse platea dictumst. Suspendisse tempus, metus in semper
-				accumsan, dolor purus imperdiet magna, a iaculis quam justo quis
-				purus. Etiam ut erat enim, et aliquet orci.</p>
-			<div class="button_01">
-				<a href="#">Read more</a>
-			</div>
+			<p>A newcomer to this page can create his or her account and immediately connect with other players in order to schedule
+			tournaments, friendly matches or league competitions. This page will help him to find like-minded individual with whom
+			he can share unforgettable moments. But beware - there can be only one winner ...</p>
 		</div>
 
 		<div class="section_w480">
 
-			<div class="header_01">Our Activities</div>
+			<div class="header_01">What this is all about</div>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Integer vitae metus quis libero consectetur egestas. In hac
-				habitasse platea dictumst. Suspendisse tempus, metus in semper
-				accumsan.</p>
+			<p>This project came to life as a result of home assignment in university course focused on advanced J2EE and JBoss technologies. The goal
+			of this project is to integrate various Red Hat technologies in order to get a simple Enterprise Java application. It is open-source project, 
+			available on <a href="https://github.com/fbogyai/sport-league-system.git" target="_blank">GitHub</a>. Some ot the technologies are mentionned below: </p>
 
-			<div class="margin_bottom_20"></div>
 
-			<div class="section_w160 fl">
-				<div class="image_wrapper">
-					<img src="#{request.contextPath}/resources/css/images/templatemo_image_03.jpg" alt="image" />
-				</div>
-
-			</div>
-
-			<div class="section_w270 fr">
-
-				<ul class="content_list_01">
-					<li>Cras urna nisi, porta et gravida blandit, laoreet ornare
-						nunc.</li>
-					<li>Donec tincidunt sem eget velit cursus sit amet ullamcorper
-						mi vulputate.</li>
+				<ul>
+					<li>JBoss Application Server 7.1.1 - WildFly</li>
+					<li>EJB</li>
+					<li>CDI</li>
+					<li>Seam</li>
+					<li>OpenShift</li>
+					<li>RestEasy</li>
+					<li>Arquillian</li>
+					<li>and other ...</li>
 				</ul>
 
 				<div class="margin_bottom_20"></div>
-
-				<div class="button_01">
-					<a href="#">Read more</a>
-				</div>
-			</div>
 
 
 
