added principal main page and controller

--- a/src/main/webapp/accounts/index.xhtml
+++ b/src/main/webapp/accounts/index.xhtml
@@ -6,66 +6,65 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:param name="currentTitle" value="Account" />
 	<ui:define name="content">
-		<div class="header_01">Welcome to Sport Center</div>
+		<div class="header_01">My Account management</div>
 
 		<div class="section_w480">
 			<div class="image_wrapper fl_img">
-				<img src="images/templatemo_image_02.jpg" alt="photo three" />
+				<img src="#{request.contextPath}/resources/css/images/account.png"
+					alt="Account" />
 			</div>
-			<p class="em_text">
-				This Free CSS Template is provided by <a
-					href="http://www.templatemo.com" target="_parent">TemplateMo.com</a>.
-				You may use this template in your websites. Credit goes to <a
-					href="http://www.photovaco.com" target="_blank">Free Photos</a> for
-				photos used in this template.
-			</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Integer vitae metus quis libero consectetur egestas. In hac
-				habitasse platea dictumst. Suspendisse tempus, metus in semper
-				accumsan, dolor purus imperdiet magna, a iaculis quam justo quis
-				purus. Etiam ut erat enim, et aliquet orci.</p>
-			<div class="button_01">
-				<a href="#">Read more</a>
-			</div>
+			<p class="em_text">On this page below you can view your user
+				profile.</p>
+			<p>Here you are free to edit your account details and
+				credentials.</p>
 		</div>
 
 		<div class="section_w480">
 
-			<div class="header_01">Our Activities</div>
+			<div class="header_03">My Profile</div>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Integer vitae metus quis libero consectetur egestas. In hac
-				habitasse platea dictumst. Suspendisse tempus, metus in semper
-				accumsan.</p>
-
-			<div class="margin_bottom_20"></div>
-
-			<div class="section_w160 fl">
-				<div class="image_wrapper">
-					<img src="images/templatemo_image_03.jpg" alt="image" />
-				</div>
-
+			<div class="column_box details_header">
+				Login:
 			</div>
-
-			<div class="section_w270 fr">
-
-				<ul class="content_list_01">
-					<li>Cras urna nisi, porta et gravida blandit, laoreet ornare
-						nunc.</li>
-					<li>Donec tincidunt sem eget velit cursus sit amet ullamcorper
-						mi vulputate.</li>
-				</ul>
-
-				<div class="margin_bottom_20"></div>
-
-				<div class="button_01">
-					<a href="#">Read more</a>
-				</div>
+			<div class="column_box">
+				#{principal.loginName}
 			</div>
+			<div class="cleaner">&#160;</div>
+			
+			<div class="column_box details_header">
+				Role:
+			</div>
+			<div class="column_box">
+				#{principal.role}
+			</div>
+			<div class="cleaner">&#160;</div>
 
+			<div class="cleaner_horizontal_divider">&#160;</div>
+			<div class="cleaner">&#160;</div>
 
+			<div class="column_box details_header">
+				First Name:
+			</div>
+			<div class="column_box">
+				#{principal.user.firstName}
+			</div>
+			<div class="cleaner">&#160;</div>
 
-			<div class="cleaner"></div>
+			<div class="column_box details_header">
+				Last Name:
+			</div>
+			<div class="column_box">
+				#{principal.user.lastName}
+			</div>
+			<div class="cleaner">&#160;</div>
+
+			<div class="column_box details_header">
+				Phone Number:
+			</div>
+			<div class="column_box">
+				#{principal.user.phoneNumber}
+			</div>
+			<div class="cleaner">&#160;</div>
 		</div>
 	</ui:define>
 </ui:composition>
