--- a/src/main/webapp/users/index.xhtml
+++ b/src/main/webapp/users/index.xhtml
@@ -11,7 +11,7 @@
 		<div class="section_w480">
 			<div class="image_wrapper fl_img">
 				<img src="#{request.contextPath}/resources/css/images/user.jpg"
-					alt="Sport" />
+					alt="User" />
 			</div>
 			<p class="em_text">On this page below you as an administrator can view
 			all users using this portal and also learn all details about them.</p>
