added edit dialog to principal

--- a/src/main/webapp/accounts/index.xhtml
+++ b/src/main/webapp/accounts/index.xhtml
@@ -65,6 +65,10 @@
 				#{principal.user.phoneNumber}
 			</div>
 			<div class="cleaner">&#160;</div>
+			<br /><br />
+			<div class="button_01">
+				<h:link value="Edit My Profile" outcome="/accounts/edit" />
+			</div>
 		</div>
 	</ui:define>
 </ui:composition>
