changed password input field

--- a/src/main/webapp/accounts/formPrincipal.xhtml
+++ b/src/main/webapp/accounts/formPrincipal.xhtml
@@ -15,7 +15,7 @@
 			<tr>
 				<td class="titleCell"><h:outputLabel for="password"
 						value="Password:" styleClass="attr_name" /></td>
-				<td><h:inputText id="password" value="#{principal.password}" /></td>
+				<td><h:inputSecret id="password" value="#{principal.password}" /></td>
 			</tr>
 			<tr>
 				<td colspan="2"><h:message for="password" errorClass="invalid" /></td>
