added registration page (not tested yet) added register method

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -41,7 +41,7 @@
 							<span style="margin-left: 5px">or</span>
 						</h:column>
 						<h:column>
-							<span style="margin-left: 5px"><h:link value="Register" /></span>
+							<span style="margin-left: 5px"><h:link value="Register" outcome="/register" /></span>
 						</h:column>
 					</h:panelGrid>
 				</form>
